fix: overflow y

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: 'Open Sans', sans-serif;
 	vertical-align: baseline;
+	overflow-y: hidden;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
